[package]
name = "tokio-mockstream"
version = "1.1.1"
description = "A fake stream for testing network applications backed by buffers."
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "MIT/Apache-2.0"
keywords = ["testing", "async"]
repository = "https://github.com/aatxe/tokio-mockstream"
readme = "README.md"
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha.6"

[dev-dependencies]
bytes = "0.4"
